feat : material del ejemplo.

--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
             <button type="submit" class="submit-btn">Enviar Formulario</button>
         </form>
     </div>
+    <script src="Dynamics/JS/validaciones.js"></script>
 </body>
 </html>
