Feat: Se agregan inputs para la edad y para el codigo postal, para tener de tipo numerico

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             </div>
 
             <div class="form-group">
+                <label for="">Edad</label>
+                <input type="number" name="edad" id="edad" placeholder="Ingresa tu edad">
+            </div>
+
+            <div class="form-group">
+                <label for="">Código Postal</label>
+                <input type="number" name="codigo_postal" id="codigo_postal" placeholder="Ingresa tu codigo postal: xxxxxx">
+            </div>
+
+            <div class="form-group">
                 <label>Género:</label>
                 <div class="radio-group">
                     <div class="radio-item">
